User story 7 upgrading an account: Completed

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,7 @@
 
 en:
   hello: "Hello world"
+  pundit:
+    default: "You cannot perform this action."
+    wiki_policy:
+      create?: "Please upgrade to premium for private Wikis!"
